Site menu - fix sizes and methods on mobile

--- a/source/style/sidebar.module.styl
+++ b/source/style/sidebar.module.styl
@@ -1,13 +1,14 @@
 #site-menu {
-  z-index: 999;
+  z-index: 9999;
+  width: 300px;
   transition: transform 400ms ease;
   transform: translateX(-100%);
   top: 0;
   bottom: 0;
   overflow: hidden;
   background: white;
-  z-index: 300;
   min-width: 280px;
+  max-width: 90%;
 
   &.showing {
     transform: translateX(0);
